--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@
 # spring.datasource.password=password
 # logging.level.org.springframework=debug
 # spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/parkplus?createTableIfNotExists=true
+spring.datasource.username=root
+spring.datasource.password=rajat12345
+spring.jpa.hibernate.ddl-auto=create
